Fix alignment issues in title name in VenueDetail

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -8,13 +8,15 @@
 }
 
 .detailImage {
-   float: right;
-   top: -16px;
-   right: -706px;
+  float: right;
+  top: -16px;
+  right: -706px;
+  margin-top: 10px;
+  margin-left: 20px;
 
-   display: inline-block;
-   max-height: 300px;
-   max-width: auto;
+  display: inline-block;
+  max-height: 300px;
+  max-width: auto;
 }
 /* Remove the navbar's default margin-bottom and rounded borders */
 
@@ -62,7 +64,7 @@
 }
 
 .display-title-name {
-  display: inline-block;
+  display: block;
   font-family: 'Oswald', sans-serif;
   font-size: 50px;
   font-weight: 700;
